# Geometrie

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  color.cpp  measures.cpp
